--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,8 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/ringoffire-firebase/"
             },
             "development": {
               "optimization": false,
